@@ -2,6 +2,7 @@
  * @file
  * Detailed stylings are all yours, get yourself dirty.
  */
+
 .slick--skin--boxed-carousel .slick-list {
   margin: 0 60px;
 }
@@ -26,11 +27,6 @@
 }
 
 .slick--skin--boxed-carousel .slide__content .slide__title {
-  font-size: 22px;
-  font-size: 1.375rem;
-}
-
-#content .slick--skin--boxed-carousel .slide__content .slide__title {
   font-size: 22px;
   font-size: 1.375rem;
 }
