@@ -2,6 +2,7 @@
  * @file
  * Detailed stylings are all yours, get yourself dirty.
  */
+
 .slick--skin--boxed.slick--slider .slick__slide .slide__caption {
   visibility: hidden;
 }
