@@ -1,10 +1,7 @@
 /**
  * @file
  */
+
 .slick-wrapper {
   margin-bottom: 60px;
-}
-
-.slide .field-type-text-long {
-  padding: 20px 0 10px;
 }
