@@ -2,10 +2,10 @@
  * @file
  * Detailed stylings are all yours, get yourself dirty.
  */
+
 .slick--skin--fullwidth .slide__caption {
   font-size: 22px;
   font-size: 1.375rem;
-  /* color: #fff; */
 }
 
 .slick--skin--fullwidth .slide__media img {
@@ -13,10 +13,8 @@
 }
 
 .slick--skin--fullwidth .slide__title {
-  /* color: #fff; */
   font-size: 48px;
   font-size: 3rem;
-  font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
 }
@@ -24,19 +22,15 @@
 .slick--skin--fullwidth .slide__link a {
   border-bottom: 2px solid rgba(255, 255, 255, 0.8);
   border-top: 2px solid rgba(255, 255, 255, 0.8);
-  /* color: #fff; */
-  color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
 }
 
 .slick--skin--fullwidth .slide__link a:hover {
   border-color: #fff;
-  /* color: #fff; */
   text-decoration: none;
 }
 
 .slick--skin--fullwidth .slide__constrained {
-  *zoom: 1;
   min-height: 210px;
 }
 
