@@ -7,8 +7,8 @@
 }
 
 @media (min-width: 64em) {
-  .slide--caption--split-left > .slide__content > .slide__caption,
-  .slide--caption--split-right > .slide__content > .slide__caption {
+  .slide--caption--split-left .slide__caption,
+  .slide--caption--split-right .slide__caption {
     left: 0;
     padding: 20px;
     position: absolute;
@@ -16,54 +16,54 @@
     width: 42%;
   }
 
-  .slick--skin--split .slide--caption--split-left > .slide__content > .slide__media,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) > .slide__content > .slide__media {
+  .slick--skin--split .slide--caption--split-left .slide__media,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) .slide__media {
     float: left;
     width: 48%;
   }
 
-  .slick--skin--split .slide--caption--split-right > .slide__content > .slide__media,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(even) > .slide__content > .slide__media {
+  .slick--skin--split .slide--caption--split-right .slide__media,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(even) .slide__media {
     float: right;
     width: 48%;
   }
 
-  .slick--skin--split .slide--caption--split-left > .slide__content > .slide__caption,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) > .slide__content > .slide__caption {
+  .slick--skin--split .slide--caption--split-left .slide__caption,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) .slide__caption {
     margin-left: 52%;
     width: auto;
   }
 
-  .slick--skin--split .slide--caption--split-right > .slide__content > .slide__caption,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(even) > .slide__content > .slide__caption {
+  .slick--skin--split .slide--caption--split-right .slide__caption,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(even) .slide__caption {
     margin-right: 52%;
     width: auto;
   }
 
-  .slick--skin--split .slide--caption--split-left > .slide__content > .slide__media,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) > .slide__content > .slide__media {
+  .slick--skin--split .slide--caption--split-left .slide__media,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) .slide__media {
     float: left;
     width: 48%;
   }
 
-  .slick--skin--split .slide--caption--split-right > .slide__content > .slide__media,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(even) > .slide__content > .slide__media {
+  .slick--skin--split .slide--caption--split-right .slide__media,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(even) .slide__media {
     float: right;
     width: 48%;
   }
 
-  .slick--skin--split .slide--caption--split-left > .slide__content > .slide__constrained > .slide__caption,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) > .slide__content > .slide__constrained > .slide__caption,
-  .slick--skin--split .slide--caption--split-left > .slide__content > .slide__caption,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) > .slide__content > .slide__caption {
+  .slick--skin--split .slide--caption--split-left .slide__constrained > .slide__caption,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) .slide__constrained > .slide__caption,
+  .slick--skin--split .slide--caption--split-left .slide__caption,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(odd) .slide__caption {
     margin-left: 52%;
     width: auto;
   }
 
-  .slick--skin--split .slide--caption--split-right > .slide__content > .slide__constrained > .slide__caption,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(even) > .slide__content > .slide__constrained > .slide__caption,
-  .slick--skin--split .slide--caption--split-right > .slide__content > .slide__caption,
-  .slick--skin--split .slide--caption--split-zebra:nth-child(even) > .slide__content > .slide__caption {
+  .slick--skin--split .slide--caption--split-right .slide__constrained > .slide__caption,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(even) .slide__constrained > .slide__caption,
+  .slick--skin--split .slide--caption--split-right .slide__caption,
+  .slick--skin--split .slide--caption--split-zebra:nth-child(even) .slide__caption {
     margin-right: 52%;
     width: auto;
   }
